k8-deploy.yaml
# Creates Replicaset 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue
  labels:
    app: catalogue
spec:
  replicas: 3
  strategy: 
    # type: Recreate
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 20
  selector:
    matchLabels:
      app: catalogue
  template:
    metadata:
      labels:
        app: catalogue
    spec:
      containers:
      - name: catalogue
        image: 355449129696.dkr.ecr.us-east-1.amazonaws.com/catalogue:007
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: catalogue-svc
spec:
  selector:
     app: catalogue
  ports:
    - protocol: TCP
      port: 8080                         # Port number that your service has to listen and this is the port you will access
      targetPort: 8080                   # TargetPort forwards the requests to the backend pod


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalogue-ingress
spec:
  rules:
  - host: robot-frontend.b54-roboshop.online
    http:
      paths:
      - path: "/api/catalogue/"
        pathType: Prefix
        backend:
          service:
            name: catalogue-svc
            port:
              number: 8080
  ingressClassName: nginx
